# responsibleai-exercise

./: README.md  section1.md  section2.md
pii-frontend/: Dockerfile  README.md  app.py  pyproject.toml
pii-server/: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
pii-server/pii_server/: get_database.py
tiny-pii/: README.md  pyproject.toml
tiny-pii/data/: pii_data.csv  pii_data_redacted.csv
tiny-pii/tests/: conftest.py  test_aggregate_filter_mask.py  test_detector_hugging_face_bert.py  test_detector_regex.py  test_pipeline.py  test_print.py
tiny-pii/tiny_pii/: pii_aggreagator.py  pii_filter.py  pii_mask.py  pii_pipeline.py
tiny-pii/tiny_pii/detectors/: __init__.py  hugging_face_bert_detector.py  regex_detector.py
tiny-pii/tiny_pii/scripts/: process_csv1.py
tiny-pii/tiny_pii/types/: __init__.py  categories.py  enum_types.py  pydantic_types.py
