[project]
name = "tiny-pii"
version = "0.1.0"
description = ""
authors = [{ name = "Than Htut Soe", email = "than@consigli.no" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic (>=2.10.5,<3.0.0)",
    "transformers (>=4.48.0,<5.0.0)",
    "torch (>=2.5.1,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
]

[[tool.poetry.source]]
name = "torchcpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"


[tool.poetry.dependencies]
torch = { source = "torchcpu" }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
